# authami

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
public/: index.html
public/components/: header.html  unknown-person.html
src/: config_debug.rs  discovery2.rs  lib.rs  main.rs  mixed_server.rs  templating.rs
templates/: 404.html.hbs  index.html.hbs  layout.html.hbs  test.hbs
templates/components/: head.hbs  header.html.hbs  unknown-person.html.hbs
